--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Titolo della prima pagina</h1>
+    <ol>
+        <li>Avengers</li>
+        <li>Matrix</li>
+    </ol>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, officiis. Illo eos tempore in aperiam placeat exercitationem facilis. Aut tempore quisquam totam mollitia unde debitis nobis eligendi est numquam quae.</p>
 </body>
 </html>
